# stocks-analysis

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  JWT_AUTH_README.md  SCHEDULER_MANAGER_README.md  USER_MANAGEMENT_README.md  deploy.sh  package.json  pyproject.toml  requirements.txt  run.sh  test_analyze_api.py  test_dialogue_sessions.py  test_llm_api.py  test_llm_full.py  test_llm_sse.py  test_multilogin.py  test_portfolio_api.py  test_rate_limit.py  test_report_history.py  test_stream_api.py  test_user_membership.py  test_watchlist_api.py  test_wechat_login.py
apps/api/app/: main.py
apps/api/app/agents/: debate.py  stock_picker.py  timer.py
apps/api/app/analyst/: __init__.py  base_analyst.py  depth_config.py  fundamental_analyst.py  market_analyst.py  news_analyst.py  prompts.py
apps/api/app/backtrader/: __init__.py  engine.py  router.py  strategy.py
apps/api/app/core/: admin.py  auth.py  auth_routes.py  config.py  database.py  indicators.py  logging.py  rate_limit.py  redis_manager.py  scheduler.py  stock_service.py  task_manager.py  wechat_routes.py
apps/api/app/data/: fetcher.py  indicators.py
apps/api/app/dialogue/: __init__.py  manager.py
apps/api/app/llm/: llm_service.py  models.py
apps/api/app/models/: __init__.py  llm.py
apps/api/app/reflection/: memory.py  reflect_generator.py  (+2 more)
apps/api/data/: api_logs.db  concept_info.csv  industry_info.csv  stock_info.csv
apps/api/scripts/: ensure-venv.cjs  init_database.py  init_redis.py  with-venv.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+211 files in other folders)
