[project]
name = "api"
version = "0.1.0"
description = "Timing Agent API - 聚焦选股与择时的简化多智能体系统"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "akshare>=1.9.99",
  "litellm>=1.40.0",
  "python-dotenv>=1.0.0",
  "numpy>=2.0.0",
  "pandas>=2.1.0",
  "opencv-python-headless>=4.8.0",
  "pytesseract>=0.3.10",
  "baostock>=0.8.8",
  "tushare>=1.4.29",
]

[scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8011"
build = "python3 -m compileall app && mkdir -p dist && echo > dist/.gitkeep"
lint = "python3 -m compileall app"
