[package]
name = "turingfin-desktop"
version = "0.1.0"
description = "TuringFin desktop app"
authors = ["TuringFin"]
edition = "2021"

[lib]
name = "turingfin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
